language/move-lang/tests/move_check/parser/friend_decl_qualified_struct.move
address 0x42 {
module A {
    struct A {}
}

module M {
    friend 0x42::A::A;
}
}
